--- a/src/Makefile-env.am
+++ b/src/Makefile-env.am
@@ -163,7 +163,7 @@ LIBOS += libos_zfs.a -lzfs
 endif # WITH_LIBZFS
 
 if WITH_TCMALLOC
-LIBPERFGLUE += -ltcmalloc
+LIBPERFGLUE += -ltcmalloc_minimal
 endif # WITH_TCMALLOC
 
 if ENABLE_COVERAGE
