--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -370,9 +370,9 @@ export RPM_OPT_FLAGS=`echo $RPM_OPT_FLAGS | sed -e 's/i386/i486/'`
                 --with-radosgw \
                 --with-nss \
                 --with-rest-bench \
-%if 0%{?_build_create_debug}
+# %if 0%{?_build_create_debug}
                 --with-debug=yes \
-%endif
+# %endif
 %if 0%{?cephfs_java}
                 --enable-cephfs-java \
 %endif
@@ -570,10 +570,10 @@ fi
 %{_bindir}/ceph_filestore_dump
 %{_bindir}/ceph_filestore_tool
 %{_bindir}/librados-config
-%if 0%{?_build_create_debug}
+# %if 0%{?_build_create_debug}
 %{_bindir}/ceph-monstore-tool
 %{_bindir}/ceph-osdomap-tool
-%endif
+# %endif
 %{_bindir}/ceph_mon_store_converter
 /sbin/mkcephfs
 /sbin/mount.ceph
